@@ -1,3 +1,5 @@
+2006/3/8 -- released version 20060308_trunk
+
 2006/3/7 -- released version 20060307_trunk
 
 2006/3/6 -- released version 20060306_trunk
